# Maths-24

./: .replit  00_24_base_v2.py  00_24_base_v3.py  00_24_base_v4.py  00_24_base_v5.py  01_game_proof.py  02_input_checker.py  03_times_adder.py  04_input_checker.py  05_get_sets.py  06_colour_expt.py  06_colour_expt_v2.py  07_color_expt_v2.py  08_get_swag.py  09_input_checker_fix.py  all_sets.csv  pyproject.toml
