[tool.poetry]
name = "repl_python3_Maths-24"
version = "0.1.0"
description = ""
authors = ["JenniferGottsc1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
colored = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
